--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="top-NFTS">
         <div class="div-2">
           <div class="text-wrapper-2">What we started with</div>
-          <img class="img-2" src="img/paperclip-tile.png" />
-          <div class="text-wrapper-3">Why paperclip?</div>
+          <a href="https://opensea.io/item/base/0x9f75f37624357735c1033a8969fb7af444c12c79/4"  target="_blank" rel="noopener noreferrer"><img class="img-2" src="img/paperclip-tile.png" /></a>
+          <div class="text-wrapper-3"><a href="#why-paperclip">Why paperclip?</a></div>
           <div class="paperclip-price">
-            <div class="text-wrapper-4">Red paperclip</div>
+            <div class="text-wrapper-4"><a href="https://opensea.io/item/base/0x9f75f37624357735c1033a8969fb7af444c12c79/4"  target="_blank" rel="noopener noreferrer">Red paperclip</a></div>
             <div class="text-wrapper-5">$0.05</div>
           </div>
         </div>
@@ -37,10 +37,10 @@
         </div>
         <div class="div-2">
           <p class="text-wrapper-2">Currently in the vault (you are the first!)</p>
-          <img class="img-2" src="img/paperclip-tile.png" />
-          <div class="text-wrapper-3"></div>
+          <a href="https://opensea.io/item/base/0x9f75f37624357735c1033a8969fb7af444c12c79/4"  target="_blank" rel="noopener noreferrer"><img class="img-2" src="img/paperclip-tile.png" /></a>
+          <div class="text-wrapper-3">&nbsp;</div>
           <div class="paperclip-price">
-            <div class="text-wrapper-4">Red paperclip</div>
+            <div class="text-wrapper-4"><a href="https://opensea.io/item/base/0x9f75f37624357735c1033a8969fb7af444c12c79/4"  target="_blank" rel="noopener noreferrer">Red paperclip</a></div>
             <div class="text-wrapper-5">$0.05</div>
           </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="div-2">
           <div class="text-wrapper-2">Our goal</div>
           <img class="img-2" src="img/satellite-tile.png" />
-          <div class="text-wrapper-3">Why satellite(s)?</div>
+          <div class="text-wrapper-3"><a href="#why-satellites">Why satellite(s)?</a></div>
           <div class="paperclip-price">
             <div class="text-wrapper-4">A real fucking satellite!</div>
             <div class="text-wrapper-5">$100,000,000</div>
@@ -132,7 +132,7 @@
       <div class="text-wrapper-12">WHY</div>
       <div class="FAQ">
         <div class="why-paperclip">
-          <div class="text-wrapper-13">Why paperclip?</div>
+          <div class="text-wrapper-13" id="why-paperclip">Why paperclip?</div>
           <p class="in-july-kyle">
             <span class="span">In July 2005, Kyle MacDonald, set out to </span>
             <span class="text-wrapper-11">trade a single red paperclip for a house</span>
@@ -154,7 +154,7 @@
           </p>
         </div>
         <div class="why-paperclip">
-          <div class="text-wrapper-13">Why satellites?</div>
+          <div class="text-wrapper-13" id="why-satellites">Why satellites?</div>
           <p class="a-celestial">
             <span class="text-wrapper-14"
               >A celestial intervention in the tradition of land art and space-bound conceptualism, this unprecedented
