Pretty html and no links on images

--- a/catalog/spirit.html
+++ b/catalog/spirit.html
@@ -1,2 +1,34 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>Spirit</title><link rel="stylesheet" href="notion-styles.css"></head><body><article id="1e54b2bd-aa9a-80f0-9cef-cde667489d28" class="page sans"><header><h1 class="page-title">Spirit</h1><table class="properties"><tbody><tr class="property-row property-row-text"><th>Collection/Series/Origin</th><td>Flow</td></tr><tr class="property-row property-row-multi_select"><th>Department</th><td><span class="selected-value select-value-color-blue">Accepted (As seen by innocent robots)</span></td></tr></tbody></table></header><div class="page-body"><p id="1e54b2bd-aa9a-80ed-a53d-e64ce325f25f" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p><figure id="1e54b2bd-aa9a-805d-aef4-dc16da82c793" class="image"><a href="spirit/spirit.jpeg.html"><img style="width:721.5908813476562px" src="spirit/Spirit.jpeg"></a></figure><p><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></p>
-    </div></article><span class="sans" style="font-size:14px;padding-top:2em"></span></body></html>
+<html>
+
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Spirit</title>
+    <link rel="stylesheet" href="notion-styles.css">
+  </head>
+
+  <body>
+    <article id="1e54b2bd-aa9a-80f0-9cef-cde667489d28" class="page sans">
+      <header>
+        <h1 class="page-title">Spirit</h1>
+        <table class="properties">
+          <tbody>
+            <tr class="property-row property-row-text">
+              <th>Collection/Series/Origin</th>
+              <td>Flow</td>
+            </tr>
+            <tr class="property-row property-row-multi_select">
+              <th>Department</th>
+              <td><span class="selected-value select-value-color-blue">Accepted (As seen by innocent robots)</span></td>
+            </tr>
+          </tbody>
+        </table>
+      </header>
+      <div class="page-body">
+        <p id="1e54b2bd-aa9a-80ed-a53d-e64ce325f25f" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
+        <figure id="1e54b2bd-aa9a-805d-aef4-dc16da82c793" class="image"><img style="width:721.5908813476562px" src="spirit/Spirit.jpeg"></figure>
+        <p><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></p>
+      </div>
+    </article><span class="sans" style="font-size:14px;padding-top:2em"></span>
+  </body>
+
+</html>
