Catalog and backlinks

--- a/catalog/index.html
+++ b/catalog/index.html
@@ -15,9 +15,10 @@
 
 <body>
 
-    <div class="jlist-header-img" style="background-image: url(https://assets.softr-files.com/applications/c4796cba-c726-44d8-b78d-3bed24502040/assets/61761a41-1ab8-492e-a41c-680e653d9eef.jpeg);">
+    <div class="jlist-header-img" style="background-image: url(./white_page.jpeg);">
         <div class="jlist-header-img-inner">
             <h2 class="title"></h2>
+            <!-- <p>Collection of NFTs.</p> -->
             <p>Collection of <span class="total">-</span> NFTs.</p>
         </div>
     </div>
@@ -40,14 +41,14 @@ list = new JList({
     db: "./db.json",
     imgPath: "",
     fields: [
-        {"name": "Category", "field": "tags", "type": "tag", "hint": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."},
-        {"name": "Skill levels", "field": "level", "type": "tag"},
-        {"name": "Artifacts", "field": "artifacts", "type": "tag"},
-        {"name": "Author", "field": "author", "type": "select"},
+        {"name": "Category", "field": "tags", "type": "tag", "hint": "We are still mining latent space to extract meaning and strucure"},
+        // {"name": "Skill levels", "field": "level", "type": "tag"},
+        // {"name": "Artifacts", "field": "artifacts", "type": "tag"},
+        // {"name": "Author", "field": "author", "type": "select"},
     ],
     menu: [
-        {name: "Back", url: "https://singularitymuseum.com"},
-        {name: "About", url: "https://singularitymuseum.com"}
+        {name: "Home", url: "https://singularitymuseum.com"},
+        // {name: "About", url: "https://singularitymuseum.com"}
     ]
 });
 
