--- a/catalog/cells.html
+++ b/catalog/cells.html
@@ -4,10 +4,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Cells</title>
     <link rel="stylesheet" href="notion-styles.css">
+    <link rel="stylesheet" href="header-footer-styles.css">
   </head>
 
   <body>
     <article id="1dc4b2bd-aa9a-8016-8d99-da4ae8e52c07" class="page sans">
+      <div class="custom-header-container">
+        <div class="custom-header"><span class="header-left"> </span><span class="header-right"><a href="../catalog.html"> &lt; back </a></span></div>
+      </div>
       <header>
         <h1 class="page-title">Cells</h1>
         <table class="properties">
@@ -26,7 +30,7 @@
       <div class="page-body">
         <p id="1e54b2bd-aa9a-8079-9f9b-c1bc1692eaae" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
         <figure id="1e54b2bd-aa9a-80cf-9450-ed78af723c47" class="image"><img style="width:721.5908813476562px" src="cells/Cells.jpeg"></figure>
-        <p><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></p>
+        <div class="custom-footer"><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></div>
       </div>
     </article><span class="sans" style="font-size:14px;padding-top:2em"></span>
   </body>
