Moving catalog.html to root

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
     <title class="title"></title>
 
-    <link rel="stylesheet" media="all" href="styles.css?v=11" />
+    <link rel="stylesheet" media="all" href="catalog/styles.css?v=11" />
 
 </head>
 
@@ -27,7 +27,7 @@
 
 <body>
 
-<script type="text/javascript" src="jlist.js?v=7"></script>
+<script type="text/javascript" src="catalog/jlist.js?v=7"></script>
 
 <script>
 
