correct db path

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
     <title class="title"></title>
 
-    <link rel="stylesheet" media="all" href="catalog/styles.css?v=11" />
+    <link rel="stylesheet" media="all" href="./catalog/styles.css?v=11" />
 
 </head>
 
@@ -27,7 +27,7 @@
 
 <body>
 
-<script type="text/javascript" src="catalog/jlist.js?v=7"></script>
+<script type="text/javascript" src="./catalog/jlist.js?v=7"></script>
 
 <script>
 
@@ -38,7 +38,7 @@ list = new JList({
     copyright: "&copy; {Y} singularitymuseum.com",
     headerTitle: false,
     limit: 12,
-    db: "./db.json",
+    db: "./catalog/db.json",
     imgPath: "",
     fields: [
         {"name": "Category", "field": "tags", "type": "tag", "hint": "We are still mining latent space to extract meaning and strucure"},
