No target blank at all

--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="jlist-header-img" style="background-image: url(./white_page.jpeg);">
+    <div class="jlist-header-img" style="background-image: url(./catalog/white_page.jpeg);">
         <div class="jlist-header-img-inner">
             <h2 class="title"></h2>
             <!-- <p>Collection of NFTs.</p> -->
