NFT links added

--- a/catalog/red-paperclip.html
+++ b/catalog/red-paperclip.html
@@ -16,19 +16,19 @@
         <h1 class="page-title">Red paperclip</h1>
         <table class="properties">
           <tbody>
-            <tr class="property-row property-row-text">
-              <th>Collection/Series/Origin</th>
-              <td>Flow</td>
-            </tr>
             <tr class="property-row property-row-multi_select">
               <th>Department</th>
               <td><span class="selected-value select-value-color-blue">Accepted (As seen by innocent robots)</span></td>
+            </tr>
+            <tr class="property-row property-row-url">
+              <th>NFT link</th>
+              <td><a href="https://opensea.io/item/base/0x9f75f37624357735c1033a8969fb7af444c12c79/4" class="url-value">https://opensea.io/item/base/0x9f75f37624357735c1033a8969fb7af444c12c79/4</a></td>
             </tr>
           </tbody>
         </table>
       </header>
       <div class="page-body">
-        <p id="1e54b2bd-aa9a-80cf-beb8-c3bde508b23a" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
+        <p id="1e54b2bd-aa9a-80cf-beb8-c3bde508b23a" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://www.notion.so/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=21">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
         <figure id="1e54b2bd-aa9a-808b-99cc-fb6d5430c1b2" class="image"><img style="width:721.5908813476562px" src="red-paperclip/Red_paperclip.jpeg"></figure>
         <div class="custom-footer"><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></div>
       </div>
