Blog and pages added

--- a/catalog/light.html
+++ b/catalog/light.html
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Light</title>
-    <link rel="stylesheet" href="notion-styles.css">
-    <link rel="stylesheet" href="header-footer-styles.css">
+    <link rel="stylesheet" href="../notion-styles.css">
+    <link rel="stylesheet" href="../header-footer-styles.css">
   </head>
 
   <body>
@@ -28,7 +28,7 @@
         </table>
       </header>
       <div class="page-body">
-        <p id="1e54b2bd-aa9a-80ad-8457-ebb49eb53b93" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://www.notion.so/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=21">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
+        <p id="1e54b2bd-aa9a-80ad-8457-ebb49eb53b93" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
         <figure id="1e54b2bd-aa9a-8044-af4a-db1ce68e3dfa" class="image"><img style="width:721.5908813476562px" src="light/Light.jpeg"></figure>
         <div class="custom-footer"><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></div>
       </div>
