Better footers, catalog update, cleanup

--- a/catalog/interlinked.html
+++ b/catalog/interlinked.html
@@ -18,7 +18,7 @@
           <tbody>
             <tr class="property-row property-row-multi_select">
               <th>Department</th>
-              <td><span class="selected-value select-value-color-blue">Accepted (As seen by innocent robots)</span></td>
+              <td><span class="selected-value select-value-color-blue">Accepted</span></td>
             </tr>
             <tr class="property-row property-row-url">
               <th>NFT link</th>
@@ -28,9 +28,9 @@
         </table>
       </header>
       <div class="page-body">
-        <p id="1e54b2bd-aa9a-804a-a456-cef0091b6538" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
+        <p id="1e54b2bd-aa9a-804a-a456-cef0091b6538" class="">We are still mining latent space to extract meaning for this item. Check&nbsp;<a href="../acceptance.html">A.C.C.E.P.T.A.N.C.E. dashboard</a>&nbsp;to see what we are up to right now.</p>
         <figure id="1e54b2bd-aa9a-8097-807a-f9c38883addc" class="image"><img style="width:721.5908813476562px" src="interlinked/Interlinked.jpeg"></figure>
-        <div class="custom-footer"><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></div>
+        <div class="custom-footer"><a href="https://singularitymuseum.com/acceptance.html">by A.C.C.E.P.T.A.N.C.E.</a></div>
       </div>
     </article><span class="sans" style="font-size:14px;padding-top:2em"></span>
   </body>
