--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>projects</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="notion-styles.css">
     <link rel="stylesheet" href="header-footer-styles.css">
   </head>
@@ -13,26 +13,27 @@
         <div class="custom-header"><span class="header-left"> </span><span class="header-right"><a href="index.html"> &lt; back </a></span></div>
       </div>
       <header>
-        <h1 class="page-title">projects</h1>
+        <div class="page-header-icon undefined"><span class="icon">📺</span></div>
+        <h1 class="page-title">Projects</h1>
       </header>
       <div class="page-body">
         <p id="e620311a-0c38-47ba-941e-158e7826afa8" class="">Entertainment and depth. Viral, simple to grasp, amazing yet thought-provoking. As we love here awareness and promotion. Gallery level art. Expensive both to produce and to buy. Relation of art, humans and money is a big theme here, so there is always something to grab.</p>
         <p id="1f14b2bd-aa9a-8085-a666-e3b1e895a598" class="">All projects under Resistance mutually organically promote each other. </p>
         <h1 id="30ed8c20-9080-4298-9a91-88e5fc44496d" class="">Save our souls</h1>
         <p id="11ff8739-1f4d-4f40-9a77-dad6a4a7cf5a" class="">Nine satellites forming Morse code for SOS visible to the whole Earth. An art project that the world needs. The message is felt instantly.</p>
-        <figure id="e4d479fa-a6f2-414c-8dc0-e77659f346d2" class="link-to-page"><a href="projects/save-our-souls-dashboard.html"><span class="icon">🛰️</span>Save Our Souls Dashboard</a></figure>
-        <h1 id="1f14b2bd-aa9a-8035-a608-ee47ed6d0b36" class="">Paperclip for satellite</h1>
-        <p id="1f14b2bd-aa9a-80c8-a6b9-d93363574add" class=""><a href="https://singularitymuseum.com/space-crew/">https://singularitymuseum.com/space-crew/</a></p>
+        <figure id="e4d479fa-a6f2-414c-8dc0-e77659f346d2" class="link-to-page"><a href="projects/save-our-souls.html"><span class="icon">🛰️</span>Save Our Souls</a></figure>
+        <h1 id="1f14b2bd-aa9a-8035-a608-ee47ed6d0b36" class="">The Space Crew (Screw)</h1>
+        <p id="1f34b2bd-aa9a-80cf-b160-e75f673dceb0" class="">Trading paperclip for the satellites. You can participate, become a part of the Space Crew and get any of your NFTs screwed (to the satellite).</p>
+        <p id="1f34b2bd-aa9a-8006-98b4-e36e3d4a1286" class=""><a href="https://screw.singularitymuseum.com">Go to project homepage.</a></p>
         <h1 id="87b8d6a5-c384-4dc6-9d55-8659d60bb350" class="">Million Ether Homepage</h1>
         <p id="7765772a-9ded-436a-819f-34dee20aba10" class="">An advertising platform on the surface. Deeper meaning undermined. A project exploring the nature of humanity. <a href="http://TheMillionEtherHomePage.com">TheMillionEtherHomePage.com</a> (MEH) is an advertising platform launched at the dawn of web3 era (launched <a href="https://etherscan.io/tx/0x1186c411620abe81fa4cb7ee97086818be2b0c31be19180a50e0c1227bbbdff5">13 December 2016</a>). It allows to buy an area at 1000x1000 pixels field and place ads within that area. An ad is an image with a link to a website. In other words the project is a decentralised and trustless version of <a href="http://milliondollarhomepage.com">milliondollarhomepage.com</a> (from the dawn of web2 era).</p>
-        <h1 id="1f14b2bd-aa9a-801e-bc33-cf99d14df01e" class="">Upala</h1>
-        <p id="1f14b2bd-aa9a-80bc-9715-e939fcb03d34" class="">Upala is a decentralized digital identity. The protocol generates human uniqueness score for users. The score is measured in dollars. Each account score is determined by market. Incentives ensure that the score equals the costs of forging the account. The score directly reflects how valuable that identity is to the user and creates an entirely new way to measure reputability in the virtual and real world.</p>
-        <p id="1f14b2bd-aa9a-8028-a444-cf2316f1ba3f" class=""><a href="../upala-dashboard.html">Notion dashboard</a></p>
-        <h1 id="1774b2bd-aa9a-80be-8010-f4def1a2b2d3" class="">World war</h1>
-        <figure id="d3668097-d8b3-4a89-9fe0-5e365777e3d4" class="link-to-page"><a href="projects/world-war.html">World war</a></figure>
+        <p id="1f34b2bd-aa9a-805a-b36a-d200130046f6" class=""><a href="http://TheMillionEtherHomePage.com">Go to project.</a></p>
+        <h1 id="1f14b2bd-aa9a-801e-bc33-cf99d14df01e" class="">Upala digital identity</h1>
+        <p id="1f14b2bd-aa9a-80bc-9715-e939fcb03d34" class="">Upala is a decentralized digital identity. The protocol generates human uniqueness score for users. The score is measured in dollars. Each account score is determined by market. Incentives ensure that the score equals the costs of forging the account. The score directly reflects how valuable that identity is to the user and creates an entirely new way to measure reputability in the virtual and real world. </p>
+        <p id="1f34b2bd-aa9a-809d-abcd-e09713d382cb" class="">Go to <img class="icon" src="../upala-dashboard/C365D45C-E9C1-4867-9612-A2A87A9C0B90.png">Upala dashboard </p>
         <h1 id="1f14b2bd-aa9a-8059-9fde-ea68949e0807" class=""><strong>Concrete Clock 1355</strong></h1>
-        <p id="1f14b2bd-aa9a-804b-b999-ee97e098d505" class=""><a href="https://github.com/porobov/Concrete-Clock-1355">https://github.com/porobov/Concrete-Clock-1355</a></p>
-        <div class="custom-footer"><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></div>
+        <p id="1f34b2bd-aa9a-8045-9936-e7516f05d6a4" class="">Single concrete clock design. Endless creativity. Non-crypto. <a href="https://github.com/porobov/Concrete-Clock-1355">Participate for free</a>.</p>
+        <div class="custom-footer"><a href="https://singularitymuseum.com/acceptance.html">by A.C.C.E.P.T.A.N.C.E.</a></div>
       </div>
     </article><span class="sans" style="font-size:14px;padding-top:2em"></span>
   </body>
