--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>blog</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="notion-styles.css">
     <link rel="stylesheet" href="header-footer-styles.css">
   </head>
@@ -13,8 +13,8 @@
         <div class="custom-header"><span class="header-left"> </span><span class="header-right"><a href="index.html"> &lt; back </a></span></div>
       </div>
       <header>
-        <div class="page-header-icon undefined"><span class="icon">🏄‍♂️</span></div>
-        <h1 class="page-title">blog</h1>
+        <div class="page-header-icon undefined"><span class="icon">📎</span></div>
+        <h1 class="page-title">Blog</h1>
       </header>
       <div class="page-body">
         <figure id="b322dca7-358e-4ba4-9255-af9001869a37" class="link-to-page"><a href="blog/starting-the-resistance.html"><span class="icon">🤖</span>Starting the resistance</a></figure>
@@ -22,7 +22,7 @@
         <figure id="1444b2bd-aa9a-80b5-8d63-eae5862b490b" class="link-to-page"><a href="blog/bangkok-intuition,-acceptance-and-the-flow.html"><span class="icon">🌸</span>Bangkok. Intuition, Acceptance and the Flow.</a></figure>
         <figure id="60c6a130-537b-4b0c-bbc5-3de6b6e701e6" class="link-to-page"><a href="blog/build-new-psychology-to-win-machines.html"><span class="icon">🍀</span>Build new psychology to win machines</a></figure>
         <figure id="6a395636-88bd-4de2-9188-7a9380189b95" class="link-to-page"><a href="blog/selling-ideas.html"><span class="icon">💡</span>Selling ideas</a></figure>
-        <div class="custom-footer"><a href="https://upalahq.notion.site/A-C-C-E-P-T-A-N-C-E-fe0f3b4b9fe34600aa988da4ff1e28d6?pvs=4">by A.C.C.E.P.T.A.N.C.E.</a></div>
+        <div class="custom-footer"><a href="https://singularitymuseum.com/acceptance.html">by A.C.C.E.P.T.A.N.C.E.</a></div>
       </div>
     </article><span class="sans" style="font-size:14px;padding-top:2em"></span>
   </body>
